tests/baselines/reference/YieldExpression6_es6.errors.txt
tests/cases/conformance/es6/yieldExpressions/YieldExpression6_es6.ts(2,9): error TS2461: Type '() => any' is not an array type or does not have an '__iterator__()' method that returns an iterator.


==== tests/cases/conformance/es6/yieldExpressions/YieldExpression6_es6.ts (1 errors) ====
    function* foo() {
      yield*foo
            ~~~
!!! error TS2461: Type '() => any' is not an array type or does not have an '__iterator__()' method that returns an iterator.
    }